Bug 906350 - LoadLibraryW(kDwmLibraryName) should check non 0 rather than >31. r=roc