widget/windows/WinUtils.cpp
@@ -76,8 +76,7 @@ WinUtils::Initialize()
   if (!sDwmDll && WinUtils::GetWindowsVersion() >= WinUtils::VISTA_VERSION) {
     sDwmDll = ::LoadLibraryW(kDwmLibraryName);
 
-    // MSDN: "If the function succeeds, the return value is greater than 31."
-    if (uintptr_t(sDwmDll) > 31) {
+    if (sDwmDll) {
       dwmExtendFrameIntoClientAreaPtr = (DwmExtendFrameIntoClientAreaProc)::GetProcAddress(sDwmDll, "DwmExtendFrameIntoClientArea");
       dwmIsCompositionEnabledPtr = (DwmIsCompositionEnabledProc)::GetProcAddress(sDwmDll, "DwmIsCompositionEnabled");
       dwmSetIconicThumbnailPtr = (DwmSetIconicThumbnailProc)::GetProcAddress(sDwmDll, "DwmSetIconicThumbnail");
